--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,4 +35,14 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.0.0-beta01'
     implementation 'com.jakewharton:butterknife:10.1.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.1.0'
+
+    implementation 'com.mikepenz:fastadapter:3.2.7'
+    implementation 'com.mikepenz:fastadapter-commons:3.2.7'
+    implementation "androidx.appcompat:appcompat:1.0.2"
+
+    implementation 'com.mikepenz:fastadapter-extensions-expandable:3.2.7'
+    //The tiny Materialize library used for its useful helper classes
+    implementation 'com.mikepenz:materialize:1.2.0'
+    implementation 'com.mikepenz:fastadapter-extensions:3.2.7'
+    implementation "com.google.android.material:material:1.0.0"
 }
