--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,7 +31,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.0-alpha4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
-    implementation 'com.weiwangcn.betterspinner:library-material:1.1.0'
+    implementation 'com.jaredrummler:material-spinner:1.3.1'
     implementation 'androidx.recyclerview:recyclerview:1.0.0-beta01'
     implementation 'com.jakewharton:butterknife:10.1.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.1.0'
@@ -45,4 +45,5 @@ dependencies {
     implementation 'com.mikepenz:materialize:1.2.0'
     implementation 'com.mikepenz:fastadapter-extensions:3.2.7'
     implementation "com.google.android.material:material:1.0.0"
+    implementation 'org.jetbrains:annotations:15.0'
 }
