--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "com.example.projectfinancial"
+        applicationId "com.example.ratio"
         minSdkVersion 15
         targetSdkVersion 28
         versionCode 1
@@ -48,4 +48,5 @@ dependencies {
     implementation 'com.mikepenz:fastadapter-extensions:3.2.7'
     implementation "com.google.android.material:material:1.0.0"
     implementation 'org.jetbrains:annotations:15.0'
+    implementation 'com.github.parse-community.Parse-SDK-Android:fcm:1.19.0'
 }
