--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,4 +49,5 @@ dependencies {
     implementation "com.google.android.material:material:1.0.0"
     implementation 'org.jetbrains:annotations:15.0'
     implementation 'com.github.parse-community.Parse-SDK-Android:fcm:1.19.0'
+    implementation 'com.github.d-max:spots-dialog:1.1@aar'
 }
