--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,4 +51,5 @@ dependencies {
     implementation 'com.github.parse-community.Parse-SDK-Android:fcm:1.19.0'
     implementation 'com.github.d-max:spots-dialog:1.1@aar'
     implementation 'com.github.satyan:sugar:1.3'
+    implementation 'com.github.davidpizarro:autolabelui:1.0.1'
 }
