--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,4 +52,6 @@ dependencies {
     implementation 'com.github.d-max:spots-dialog:1.1@aar'
     implementation 'com.github.satyan:sugar:1.3'
     implementation 'com.github.davidpizarro:autolabelui:1.0.1'
+    implementation 'com.vincent.filepicker:MultiTypeFilePicker:1.0.8'
+    implementation 'com.squareup.picasso:picasso:2.71828'
 }
