--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,4 +55,5 @@ dependencies {
     implementation 'com.vincent.filepicker:MultiTypeFilePicker:1.0.8'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.github.sadra:AwesomeSpinner:1.5.1'
+    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.9'
 }
