--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.application'
 
+def AAVersion = '4.6.0'
 android {
     compileSdkVersion 28
     defaultConfig {
@@ -23,6 +24,7 @@ android {
     }
 }
 
+
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'androidx.appcompat:appcompat:1.0.0'
@@ -35,8 +37,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
     implementation 'com.jaredrummler:material-spinner:1.3.1'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
-    implementation 'com.jakewharton:butterknife:10.1.0'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:10.1.0'
 
     implementation 'com.mikepenz:fastadapter:3.2.7'
     implementation 'com.mikepenz:fastadapter-commons:3.2.7'
@@ -50,10 +50,12 @@ dependencies {
     implementation 'org.jetbrains:annotations:15.0'
     implementation 'com.github.parse-community.Parse-SDK-Android:fcm:1.19.0'
     implementation 'com.github.d-max:spots-dialog:1.1@aar'
-    implementation 'com.github.satyan:sugar:1.3'
     implementation 'com.github.davidpizarro:autolabelui:1.0.1'
     implementation 'com.vincent.filepicker:MultiTypeFilePicker:1.0.8'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.github.sadra:AwesomeSpinner:1.5.1'
     implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.9'
+
+    annotationProcessor "org.androidannotations:androidannotations:$AAVersion"
+    implementation "org.androidannotations:androidannotations-api:$AAVersion"
 }
