--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,5 @@
 apply plugin: 'com.android.application'
 
-def AAVersion = '4.6.0'
 android {
     compileSdkVersion 28
     defaultConfig {
@@ -55,10 +54,10 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.github.sadra:AwesomeSpinner:1.5.1'
     implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.9'
-
-    annotationProcessor "org.androidannotations:androidannotations:$AAVersion"
-    implementation "org.androidannotations:androidannotations-api:$AAVersion"
     implementation 'id.zelory:compressor:2.1.0'
     implementation group: 'commons-io', name: 'commons-io', version: '2.6'
-
+    implementation 'com.jakewharton:butterknife:10.1.0'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:10.1.0'
+    implementation "io.reactivex.rxjava2:rxjava:2.2.8"
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
 }
