--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,9 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    testOptions {
+        unitTests.returnDefaultValues = true
+    }
 }
 
 
@@ -38,14 +41,9 @@ dependencies {
     implementation 'com.jaredrummler:material-spinner:1.3.1'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
 
-    implementation 'com.mikepenz:fastadapter:3.2.7'
-    implementation 'com.mikepenz:fastadapter-commons:3.2.7'
     implementation "androidx.appcompat:appcompat:1.0.2"
 
-    implementation 'com.mikepenz:fastadapter-extensions-expandable:3.2.7'
     //The tiny Materialize library used for its useful helper classes
-    implementation 'com.mikepenz:materialize:1.2.0'
-    implementation 'com.mikepenz:fastadapter-extensions:3.2.7'
     implementation "com.google.android.material:material:1.0.0"
     implementation 'org.jetbrains:annotations:15.0'
     implementation 'com.github.parse-community.Parse-SDK-Android:fcm:1.19.0'
