--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,13 +7,16 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".ContextApplication"
         android:allowBackup="true"
         android:icon="@drawable/ratiologo"
         android:label="@string/app_name"
         android:roundIcon="@drawable/ratiologo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".AdvancedSearch"></activity>
+        <activity
+            android:name=".AdvancedSearch"
+            android:windowSoftInputMode="stateHidden" />
         <activity
             android:name=".RegisterActivity"
             android:theme="@style/LoginRegister"
