--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,4 +61,5 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
     implementation 'com.github.pratikbutani:MultiSelectSpinner:08d324c98'
     implementation 'com.android.support:multidex:1.0.3'
+    implementation 'com.github.CodeFalling:RecyclerViewSwipeDismiss:1.1.3'
 }
