--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         android:roundIcon="@drawable/ratiologo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".AddIncomeActivity"></activity>
         <activity
             android:name=".AdvancedSearch"
             android:windowSoftInputMode="stateHidden" />
