--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,10 +46,7 @@ dependencies {
     implementation 'com.github.parse-community.Parse-SDK-Android:fcm:1.19.0'
     implementation 'com.github.d-max:spots-dialog:1.1@aar'
     implementation 'com.github.davidpizarro:autolabelui:1.0.1'
-    implementation 'com.github.esafirm.android-image-picker:imagepicker:2.0.0'
-    // for experimental rx picker
-    implementation 'com.github.esafirm.android-image-picker:rximagepicker:2.0.0'
-    // If you have a problem with Glide, please use the same Glide version or simply open an issue
+    implementation 'com.github.jaiselrahman:FilePicker:1.2.2'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.github.sadra:AwesomeSpinner:1.5.1'
     implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.9'
@@ -60,6 +57,6 @@ dependencies {
     implementation "io.reactivex.rxjava2:rxjava:2.2.8"
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
     implementation 'com.github.pratikbutani:MultiSelectSpinner:08d324c98'
-    implementation 'com.android.support:multidex:1.0.3'
+    implementation 'androidx.multidex:multidex:2.0.0'
     implementation 'com.github.CodeFalling:RecyclerViewSwipeDismiss:1.1.3'
 }
