--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,9 @@
         android:roundIcon="@drawable/ratiologo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".AddIncomeActivity"></activity>
+        <activity android:name=".AddRecievablesActivity"></activity>
+        <activity android:name=".AddExpensesActivity" />
+        <activity android:name=".AddIncomeActivity" />
         <activity
             android:name=".AdvancedSearch"
             android:windowSoftInputMode="stateHidden" />
