--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,4 +59,5 @@ dependencies {
     implementation 'com.github.pratikbutani:MultiSelectSpinner:08d324c98'
     implementation 'androidx.multidex:multidex:2.0.0'
     implementation 'com.github.CodeFalling:RecyclerViewSwipeDismiss:1.1.3'
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 }
